--- a/Tarea5-Detalle/Tarea5-Detalle.csproj
+++ b/Tarea5-Detalle/Tarea5-Detalle.csproj
@@ -54,6 +54,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Entidades\Analisis.cs" />
+    <Compile Include="Entidades\AnalisisDetalles.cs" />
     <Compile Include="Entidades\Usuarios.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
