--- a/Tarea5-Detalle/Tarea5-Detalle.csproj
+++ b/Tarea5-Detalle/Tarea5-Detalle.csproj
@@ -53,6 +53,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DAL\Contexto.cs" />
     <Compile Include="Entidades\Analisis.cs" />
     <Compile Include="Entidades\AnalisisDetalles.cs" />
     <Compile Include="Entidades\TipoAnalisis.cs" />
@@ -90,7 +91,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="BLL\" />
-    <Folder Include="DAL\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
