--- a/Tarea5-Detalle/Tarea5-Detalle.csproj
+++ b/Tarea5-Detalle/Tarea5-Detalle.csproj
@@ -54,6 +54,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BLL\AnalisisBLL.cs" />
+    <Compile Include="BLL\TipoAnalisisBLL.cs" />
     <Compile Include="BLL\UsuariosBLL.cs" />
     <Compile Include="DAL\Contexto.cs" />
     <Compile Include="Entidades\Analisis.cs" />
@@ -68,6 +69,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UI\rTipoAnalisis.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\rTipoAnalisis.Designer.cs">
+      <DependentUpon>rTipoAnalisis.cs</DependentUpon>
+    </Compile>
     <Compile Include="UI\rUsuarios.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -87,6 +94,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="UI\rTipoAnalisis.resx">
+      <DependentUpon>rTipoAnalisis.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="UI\rUsuarios.resx">
       <DependentUpon>rUsuarios.cs</DependentUpon>
     </EmbeddedResource>
