ya me restaura, pero no con la forma del profe

--- a/Tarea5-Detalle/Tarea5-Detalle.csproj
+++ b/Tarea5-Detalle/Tarea5-Detalle.csproj
@@ -54,6 +54,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BLL\AnalisisBLL.cs" />
+    <Compile Include="BLL\AnalisisDetallesBLL.cs" />
     <Compile Include="BLL\TipoAnalisisBLL.cs" />
     <Compile Include="BLL\UsuariosBLL.cs" />
     <Compile Include="DAL\Contexto.cs" />
